Update layout to use styles.min and fix spacing on mobile nav toggle button.

--- a/app/assets/sass/app.scss
+++ b/app/assets/sass/app.scss
@@ -24,6 +24,7 @@ body {
 	}
 	.primary-header__toggle {
 		@extend .navbar-toggle;
+		margin-top: 2.5em;
 	}
 	.primary-header__collapse {
 		@extend .navbar-collapse;
